add links for writing test articles

--- a/src/includes/sections/guide.ejs
+++ b/src/includes/sections/guide.ejs
@@ -73,11 +73,14 @@
 
                             <div class="collapse" id="writing-tests-collapse">
                                 <ul class="btn-toggle-nav">
+                                    <li><a href="/guide/writing-tests/introduction.html">Introduction</a></li>
+                                    <li><a href="/guide/writing-tests/commands.html">Commands</a></li>
+                                    <li><a href="/guide/writing-tests/selectors.html">Selectors</a></li>
+                                    <li><a href="/guide/writing-tests/adding-assertions.html">Assertions</a></li>
                                     <li><a href="/guide/writing-tests/test-syntax-bdd.html">BDD test syntax</a></li>
                                     <li><a href="/guide/writing-tests/test-syntax-exports.html">Exports test syntax</a></li>
                                     <li><a href="/guide/writing-tests/using-es-6-async-await.html">ES6 async/await</a></li>
                                     <li><a href="/guide/writing-tests/finding-interacting-with-dom-elements.html">Finding DOM elements</a></li>
-                                    <li><a href="/guide/writing-tests/adding-assertions.html">Assertions</a></li>
                                     <li><a href="/guide/writing-tests/using-xpath-selectors.html">Xpath selectors</a></li>
                                     <li><a href="/guide/writing-tests/write-complex-user-actions.html">Complex user actions</a></li>
                                     <li><a href="/guide/writing-tests/using-test-hooks.html">Test hooks</a></li>
