Adding Nightwatch Highlights page

--- a/src/includes/sections/about.ejs
+++ b/src/includes/sections/about.ejs
@@ -55,6 +55,19 @@
               </div>
 
             </li>
+            <li>
+              <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse"
+                      data-bs-target="#highlights-collapse" aria-expanded="false">
+                <a>Nightwatch Highlights</a>
+              </button>
+              <div class="collapse" id="highlights-collapse" data-section-url="/about/nightwatch-highlights/">
+                <ul class="btn-toggle-nav">
+                  <li><a href="/about/nightwatch-highlights/#types-of-testing">Types of testing</a></li>
+                  <li><a href="/about/nightwatch-highlights/#beyond-e2e">Go beyond E2E</a></li>
+                </ul>
+              </div>
+
+            </li>
           </ul>
         </nav>
       </div>
@@ -529,6 +542,12 @@
           </div>
           <p>Feel free to <a href="https://twitter.com/nightwatchjs">tip us off</a> about any articles or open source
             projects that we should list on this page.</p>
+        </div>
+
+        <div class="docs-section" data-page-uri="/about/nightwatch-highlights">
+          <div class="docs-sub-section">
+            <h2 id="types-of-testing">Types of testing</h2>
+          </div>
         </div>
       </div>
     </div>
