--- a/src/includes/navbar.ejs
+++ b/src/includes/navbar.ejs
@@ -33,7 +33,7 @@
           </div>
           <div class="nav-item">
             <a class="regular16px neutral-white-color header-links <%= activeLink('/about') %>" href="/about/community/">
-              Community
+              About
             </a>
           </div>
           <div class="nav-item">
