added highlights section

--- a/src/includes/sections/about.ejs
+++ b/src/includes/sections/about.ejs
@@ -60,10 +60,10 @@
                       data-bs-target="#highlights-collapse" aria-expanded="false">
                 <a>Nightwatch Highlights</a>
               </button>
-              <div class="collapse" id="highlights-collapse" data-section-url="/about/nightwatch-highlights/">
+              <div class="collapse" id="highlights-collapse" data-section-url="/about/highlights/">
                 <ul class="btn-toggle-nav">
-                  <li><a href="/about/nightwatch-highlights/#types-of-testing">Types of testing</a></li>
-                  <li><a href="/about/nightwatch-highlights/#beyond-e2e">Go beyond E2E</a></li>
+                  <li><a href="/about/highlights/types-of-testing.html">Types of testing</a></li>
+                  <li><a href="/about/highlights/beyond-e2e.html">Go beyond E2E</a></li>
                 </ul>
               </div>
 
@@ -544,9 +544,9 @@
             projects that we should list on this page.</p>
         </div>
 
-        <div class="docs-section" data-page-uri="/about/nightwatch-highlights">
+        <div class="docs-section" data-page-uri="<%- pageUrl %>">
           <div class="docs-sub-section">
-            <h2 id="types-of-testing">Types of testing</h2>
+            <div class="page-content"><%- pageContent %></div>
           </div>
         </div>
       </div>
