--- a/src/pages/about/index.ejs
+++ b/src/pages/about/index.ejs
@@ -3,6 +3,8 @@ const data = {
     version: Config.version,
     baseUrl: Config.baseUrl,
     section: 'about',
+    pageContent: page.content,
+    pageUrl: page.url,
     pageTitle: 'About | Nightwatch.js',
     pageDescription: 'How to get in touch with the team, and where to submit bugs and feature requests.',
     pageImage: '/img/banners/nightwatch.jpg'
