--- a/src/includes/sections/about.ejs
+++ b/src/includes/sections/about.ejs
@@ -62,7 +62,7 @@
               </button>
               <div class="collapse" id="highlights-collapse" data-section-url="/about/highlights/">
                 <ul class="btn-toggle-nav">
-                  <li><a href="/about/highlights/types-of-testing.html">Types of testing</a></li>
+                  <li><a href="/about/highlights/types-of-testing.html">Multiple types of testing</a></li>
                   <li><a href="/about/highlights/beyond-e2e.html">Go beyond E2E</a></li>
                 </ul>
               </div>
