Updated Nightwatch Highlights to Highlights

--- a/src/includes/sections/about.ejs
+++ b/src/includes/sections/about.ejs
@@ -58,7 +58,7 @@
             <li>
               <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse"
                       data-bs-target="#highlights-collapse" aria-expanded="false">
-                <a>Nightwatch Highlights</a>
+                <a>Highlights</a>
               </button>
               <div class="collapse" id="highlights-collapse" data-section-url="/about/highlights/">
                 <ul class="btn-toggle-nav">
