--- a/src/pages/index.ejs
+++ b/src/pages/index.ejs
@@ -28,6 +28,51 @@ function activeLink(urlPart) {
   <!-- Fonts -->
   <style>
     @font-face {
+      font-family: 'Source Sans 3';
+      font-style: italic;
+      font-weight: 600;
+      font-display: fallback;
+      src: url(/css/landing/fonts/source-sans-3-italic.woff2) format('woff2');
+      unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+    }
+
+    @font-face {
+      font-family: 'Source Sans 3';
+      font-style: normal;
+      font-weight: 400;
+      font-display: fallback;
+      src: 
+        url(/css/landing/fonts/source-sans-3.woff2) format('woff2'),
+        url(/css/landing/fonts/source-sans-3.woff2) format('woff2 supports variations'),
+        url(/css/landing/fonts/source-sans-3.woff2) format('woff2-variations');
+      unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+    }
+
+    @font-face {
+      font-family: 'Source Sans 3';
+      font-style: normal;
+      font-weight: 600;
+      font-display: fallback;
+      src:
+        url(/css/landing/fonts/source-sans-3.woff2) format('woff2'),
+        url(/css/landing/fonts/source-sans-3.woff2) format('woff2 supports variations'),
+        url(/css/landing/fonts/source-sans-3.woff2) format('woff2-variations');
+      unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+    }
+
+    @font-face {
+      font-family: 'Source Sans 3';
+      font-style: normal;
+      font-weight: 700;
+      font-display: fallback;
+      src:
+        url(/css/landing/fonts/source-sans-3.woff2) format('woff2'),
+        url(/css/landing/fonts/source-sans-3.woff2) format('woff2 supports variations'),
+        url(/css/landing/fonts/source-sans-3.woff2) format('woff2-variations');
+      unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+    }
+
+    @font-face {
       font-family: 'IBM Plex Mono';
       font-style: normal;
       font-weight: 400;
@@ -36,18 +81,6 @@ function activeLink(urlPart) {
         url(/css/landing/fonts/ibm-plex-mono-400.woff2) format('woff2'),
         url(/css/landing/fonts/ibm-plex-mono-400.woff2) format('woff2 supports variations'),
         url(/css/landing/fonts/ibm-plex-mono-400.woff2) format('woff2-variations');
-      unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-    }
-
-    @font-face {
-      font-family: 'IBM Plex Mono';
-      font-style: normal;
-      font-weight: 500;
-      font-display: fallback;
-      src:
-        url(/css/landing/fonts/ibm-plex-mono-500.woff2) format('woff2'),
-        url(/css/landing/fonts/ibm-plex-mono-500.woff2) format('woff2 supports variations'),
-        url(/css/landing/fonts/ibm-plex-mono-500.woff2) format('woff2-variations');
       unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
     }
 
@@ -64,20 +97,19 @@ function activeLink(urlPart) {
     }
 
     @font-face {
-      font-family: 'Inter';
+      font-family: 'IBM Plex Mono';
       font-style: normal;
-      font-weight: 100 900;
+      font-weight: 700;
       font-display: fallback;
       src:
-        url(/css/landing/fonts/inter.woff2) format('woff2'),
-        url(/css/landing/fonts/inter.woff2) format('woff2 supports variations'),
-        url(/css/landing/fonts/inter.woff2) format('woff2-variations');
-      unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+        url(/css/landing/fonts/ibm-plex-mono-700.woff2) format('woff2'),
+        url(/css/landing/fonts/ibm-plex-mono-700.woff2) format('woff2 supports variations'),
+        url(/css/landing/fonts/ibm-plex-mono-700.woff2) format('woff2-variations');      unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
     }
   </style>
 </head>
 
-<body>
+<body class="body">
 
   <!-- Navbar start -->
   <header class="header" id="header">
@@ -2170,6 +2202,8 @@ function activeLink(urlPart) {
     </section>
     <!-- Call to action section end -->
 
+  </main>
+
     <!-- Footer section start -->
     <footer class="footer-landing" aria-label="Footer">
       <div class="footer__wrapper">
@@ -2410,8 +2444,6 @@ function activeLink(urlPart) {
 
     </footer>
     <!-- Footer section end -->
-
-  </main>
   <%- include('utils') %>
   <script src="/js/landing/script.js"></script>
 </body>
