--- a/public/css/base.css
+++ b/public/css/base.css
@@ -4,18 +4,22 @@
   /* Colors */
   --background-color: hsla(0, 0%, 100%, 1);
   --border-color: hsla(0, 0%, 97%, 1);
-  --color-black: hsla(0, 0%, 0%, 1);
-  --color-light-black: hsla(0, 0%, 0%, 0.08);
-  --color-dark-grey: hsla(0, 0%, 21%, 1);
-  --color-light-grey: hsla(180, 1%, 79%, 1);
-  --color-light-cyan: hsla(180, 11%, 98%, 1);
-  --color-orange: hsla(14, 95%, 64%, 1);
-  --color-vibrant-orange: hsla(27.16, 95%, 60.78%, 1);
-  --color-pure-yellow: hsla(35.56, 100%, 68.24%, 1);
-  --color-brown: hsla(23, 55%, 20%, 1);
-  --color-grey: hsla(0, 0%, 94%, 1);
-  --color-light-yellow: hsla(49, 65%, 97%, 1);
-  --color-light-brown: hsla(23, 9%, 36%, 1);
+  --text-color: hsla(0, 0%, 0%, 1);
+  --button-border-color:hsla(0, 0%, 0%, 1);
+  --box-shadow-color: hsla(0, 0%, 0%, 0.08);
+  --button-background-color-dark:  hsla(0, 0%, 21%, 1);
+  --button-box-shadow: hsla(180, 1%, 79%, 1);
+  --button-background-color-dark-light: hsla(180, 11%, 98%, 1);
+  --text-color-accent: hsla(14, 95%, 64%, 1);
+  --button-border-accent-color: hsla(27.16, 95%, 60.78%, 1);
+  --button-background-color-accent: hsla(35.56, 100%, 68.24%, 1);
+  --subtitle-text-color: hsla(23, 55%, 20%, 1);
+  --card-border-color: hsla(0, 0%, 94%, 1);
+  --footer-background: hsla(49, 65%, 97%, 1);
+  --card-text-color: hsla(23, 9%, 36%, 1);
+
+
+
   --color-muted-brown: hsla(32, 11%, 40%, 1);
   --color-blue: hsla(230, 96%, 55%, 1);
   --color-muted-blue: hsla(217, 74%, 43%, 1);
