--- a/public/css/base.css
+++ b/public/css/base.css
@@ -22,10 +22,25 @@
 
 
 
+  --color-white: hsla(0, 0%, 100%, 1);
+  --color-light-white: hsla(0, 0%, 97%, 1);
+  --color-black: hsla(0, 0%, 0%, 1);
+  --color-light-black: hsla(0, 0%, 0%, 0.08);
+  --color-dark-grey: hsla(0, 0%, 21%, 1);
+  --color-light-grey: hsla(180, 1%, 79%, 1);
+  --color-light-cyan: hsla(180, 11%, 98%, 1);
+  --color-orange: hsla(14, 95%, 64%, 1);
+  --color-vibrant-orange: hsla(27.16, 95%, 60.78%, 1);
+  --color-pure-yellow: hsla(35.56, 100%, 68.24%, 1);
+  --color-yellow: hsla(35, 85%, 46%, 1);
+  --color-brown: hsla(23, 72%, 33%, 1);
+  --color-grey: hsla(0, 0%, 94%, 1);
+  --color-light-yellow: hsla(49, 65%, 97%, 1);
+  --color-light-brown: hsla(23, 9%, 36%, 1);
   --color-muted-brown: hsla(32, 11%, 40%, 1);
   --color-blue: hsla(230, 96%, 55%, 1);
   --color-muted-blue: hsla(217, 74%, 43%, 1);
-  --color-dark-brown: hsla(0, 0%, 20%, 1);
+  --color-dark-brown:hsla(23, 55%, 20%, 1);
 
   /* Font Size */
   --font-size-h1: calc(72 / 16 * 1rem);
