chore: fixed header background and font

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -2,6 +2,8 @@
 
 :root {
   /* Colors */
+  --header-background: hsla(0, 0%, 11%, 1);
+  --header-text-color: hsla(0, 0%, 100%, 1);
   --background-color: hsla(0, 0%, 100%, 1);
   --border-color: hsla(0, 0%, 97%, 1);
   --text-color: hsla(0, 0%, 0%, 1);
