--- a/public/css/landing/style.css
+++ b/public/css/landing/style.css
@@ -5,7 +5,7 @@
 .header {
   display: flex;
   justify-content: center;
-  background: black;
+  background: var(--header-background);
   position: sticky;
   top: 0;
   /* TODO: remove z-index and fix natively */
@@ -14,8 +14,14 @@
 
 /* Navigation section start */
 .navigation__logo {
-  width: 300px;
+  width: 242px;
   margin-right: auto;
+  padding: 14px 0;
+}
+
+.navigation__logo svg {
+  width: 100%;
+  height: 100%;
 }
 
 .navigation {
@@ -23,14 +29,8 @@
   display: flex;
   margin-left: auto;
   margin-right: auto;
-  max-width: min(1200px, 90%);
-}
-
-.navigation-link {
-  color: var(--text-color);
-  font-size: var(--font-size-h7);
-  font-weight: 500;
-  line-height: var(--line-height-22);
+  width: 100%;
+  max-width: 1400px;
 }
 
 .navigation-list {
@@ -43,9 +43,9 @@
 }
 
 .navigation-link {
-  color: var(--text-color);
+  color: var(--header-text-color);
   font-size: initial;
-  font-weight: 500;
+  font-weight: 600;
   line-height: var(--line-height-19);
   text-decoration: none;
 }
@@ -56,8 +56,14 @@
 }
 
 .navigation-list > li > a svg {
-  width: 32px;
+  width: 30px;
   height: 100%;
+  fill: var(--background-color);
+}
+
+.navigation-list:last-child {
+  gap: 32px;
+  padding-left: 52px;
 }
 
 #docsearch > svg {
@@ -86,6 +92,7 @@
 }
 
 #docsearch button .DocSearch-Button-Container > svg {
+  --docsearch-text-color: var(--background-color);
   width: 100%;
   height: 100%;
 }
@@ -93,12 +100,6 @@
 #docsearch > button:hover {
   box-shadow: unset;
 }
-
-.navigation-list:last-child {
-  gap: 30px;
-  padding-left: 52px;
-}
-
 /* Navigation section end */
 
 /* Hero Section start */
@@ -119,13 +120,17 @@
 }
 
 .hero__heading {
-  color: var(--text-color-accent);
+  color: var(--text-color);
   font-size: var(--font-size-h1);
   font-weight: 900;
   letter-spacing: 0.03em;
   line-height: var(--line-height-h1);
   padding-bottom: 22px;
   text-align: center;
+}
+
+.hero__heading--highlight {
+  color: var(--text-color-accent);
 }
 
 .hero__sub-heading {
@@ -250,9 +255,6 @@
 
 .hero__companies {
   background: var(--background-color);
-  border-radius: 20px;
-  border: 5px solid var(--border-color);
-  box-shadow: 3px 4px 10px 2px var(--box-shadow-color);
   display: flex;
   flex-direction: column;
   margin: auto;
@@ -276,7 +278,7 @@
   padding-top: 51px;
 }
 
-.hero__stats {
+.features__community-stats {
   align-items: center;
   display: flex;
   justify-content: space-evenly;
@@ -286,13 +288,16 @@
   margin-top: 64px;
   max-width: min(1200px, 90%);
   width: 100%;
+  border: 5px solid var(--border-color);
+  border-radius: 20px;
+  padding: 40px 0;
 }
 
-.hero__stats-wrapper {
+.features__community-stats-wrapper {
   padding-bottom: 8px;
 }
 
-.hero__stats-wrapper__heading {
+.features__community-stats-wrapper__heading {
   color: var(--subtitle-text-color);
   font-size: 36px;
   font-weight: 700;
@@ -300,7 +305,7 @@
   text-align: center;
 }
 
-.hero__stats-wrapper__sub-heading {
+.features__community-stats-wrapper__sub-heading {
   color: var(--subtitle-text-color);
   font-size: 18px;
   font-weight: 600;
