--- a/public/css/landing/style.css
+++ b/public/css/landing/style.css
@@ -69,6 +69,9 @@
 #docsearch > svg {
   width: 24px;
   height: 24px;
+  stroke-width: 1.6;
+  color: var(--background-color);
+  cursor: pointer;
 }
 
 #docsearch .DocSearch-Button-Placeholder {
@@ -104,11 +107,8 @@
 
 /* Hero Section start */
 .hero {
-  /* background: var(--footer-background);
-  border-radius: 30px; */
   display: flex;
   flex-direction: column;
-  /* margin: 22px 20px 0 20px; */
   padding-top: 86px;
 }
 
@@ -117,6 +117,9 @@
   margin-right: auto;
   max-width: 80rem;
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
 }
 
 .hero__heading {
@@ -125,7 +128,6 @@
   font-weight: 900;
   letter-spacing: 0.03em;
   line-height: var(--line-height-h1);
-  padding-bottom: 22px;
   text-align: center;
 }
 
@@ -160,7 +162,7 @@
   border: 2px solid var(--button-border-color);
   box-shadow: 2px 4px 10px var(--box-shadow-color);
   display: flex;
-  padding: 12px 210px 12px 19px;
+  padding: 16px 210px 16px 19px;
   position: relative;
 }
 
@@ -169,38 +171,41 @@
   font-family: var(--font-family-code);
   font-size: var(--font-size-h7-mega);
   font-weight: 400;
-  line-height: var(--line-height-27);
+  line-height: var(--line-height-h7-mega);
 }
 
 .hero__action-copy-command-text::before {
   color: var(--text-color-accent);
   content: '$';
   font-size: inherit;
-  font-weight: 400;
-  line-height: var(--line-height-30);
+  font-weight: 700;
+  line-height: inherit;
   padding-right: 16px;
+  vertical-align: text-bottom;
 }
 
 .hero__action-copy-command-button {
   background: var(--button-background-color-dark);
   border-radius: 6px;
-  border: 1px solid var(--color-muted-brown);
+  border: 1px solid var(--button-border-color-dark);
   box-shadow: inset 0 -4px 0 var(--button-border-color);
-  color: var(--background-color);
+  color: var(--text-color-light);
   font-family: var(--font-family-code);
   font-size: var(--font-size-h7);
-  font-weight: 500;
-  line-height: var(--line-height-33);
-  padding: 12px 50px;
+  font-weight: 600;
+  line-height: var(--line-height-h7);
+  padding: 12px 0;
   position: absolute;
   right: -6px;
   top: -2px;
+  width: 100%;
+  max-width: 145px;
 }
 
 .hero__action-copy-command-button:hover {
-  background: var(--button-background-color-accent);
-  border: 1px solid var(--button-border-accent-color);
-  box-shadow: inset 0 -4px 0 var(--button-border-accent-color);
+  background: var(--button-background-color-light);
+  border: 1px solid var(--button-border-color);
+  box-shadow: inset 0 -4px 0 var(--button-border-color);
   color: var(--text-color);
   cursor: pointer;
   transition: 0.3s ease-in-out;
@@ -208,25 +213,25 @@
 }
 
 .hero__action-button--get-started {
-  background: var(--button-background-color-dark-light);
+  background: var(--button-background-color-light);
   border-radius: 6px;
-  border: 1px solid var(--color-muted-brown);
-  box-shadow: inset 0 -4px 0 var(--button-box-shadow-color);
+  border: 1px solid var(--button-border-color-dark);
+  box-shadow: inset 0 -4px 0 var(--button-box-shadow);
   color: var(--text-color);
   font-family: var(--font-family-code);
   font-feature-settings: 'salt' on;
   font-size: var(--font-size-h7);
-  font-weight: 500;
-  line-height: var(--line-height-33);
+  font-weight: 600;
+  line-height: var(--line-height-h7);
   padding: 12px 20px;
   text-decoration: none;
 }
 
 .hero__action-button--get-started:hover {
-  background: var(--button-background-color-accent);
-  border: 1px solid var(--button-border-accent-color);
-  box-shadow: inset 0 -4px 0 var(--button-border-accent-color);
-  color: var(--text-color);
+  background: var(--button-background-color-dark);
+  border: 1px solid var(--button-border-color);
+  box-shadow: inset 0 -4px 0 var(--button-border-color);
+  color: var(--text-color-light);
   cursor: pointer;
   transition: 0.4s ease-in-out;
   will-change: background, color, border, box-shadow;
@@ -523,9 +528,9 @@
 
 .capabilities--single-column .capabilities__card .capabilities__card-button {
   align-items: center;
-  background: var(--button-background-color-dark-light);
+  background: var(--button-background-color-light);
   border-radius: 6px;
-  border: 1px solid var(--color-muted-brown);
+  border: 1px solid var(--button-border-color-dark);
   box-shadow: inset 0px -4.35724px 0px var(--button-box-shadow-color);
   color: var(--text-color);
   display: flex;
@@ -605,9 +610,9 @@
 
 .capabilities--double-column .capabilities__card .capabilities__card-button {
   align-items: center;
-  background: var(--button-background-color-dark-light);
+  background: var(--button-background-color-light);
   border-radius: 6px;
-  border: 1px solid var(--color-muted-brown);
+  border: 1px solid var(--button-border-color-dark);
   box-shadow: inset 0px -4.35724px 0px var(--button-box-shadow-color);
   color: var(--text-color);
   display: flex;
@@ -706,7 +711,7 @@
 .performance__content-description-button {
   background: var(--button-background-color-dark);
   border-radius: 6px;
-  border: 1px solid var(--color-muted-brown);
+  border: 1px solid var(--button-border-color-dark);
   box-shadow: inset 0px -4.35724px 0px var(--button-border-color);
   color: var(--text-color);
   color: var(--background-color);
@@ -848,7 +853,7 @@
 .comparison__content-wrapper-button {
   background: var(--button-background-color-dark);
   border-radius: 6px;
-  border: 1px solid var(--color-muted-brown);
+  border: 1px solid var(--button-border-color-dark);
   box-shadow: inset 0px -4.35724px 0px var(--button-border-color);
   color: var(--text-color);
   color: var(--background-color);
@@ -1225,7 +1230,7 @@
 .call-to-action-content-action-copy-command-button {
   background: var(--button-background-color-dark);
   border-radius: 6px;
-  border: 2px solid var(--color-muted-brown);
+  border: 2px solid var(--button-border-color-dark);
   box-shadow: inset 0 -4px 0 var(--button-border-color);
   color: var(--background-color);
   font-family: var(--font-family-code);
@@ -1249,9 +1254,9 @@
 }
 
 .call-to-action-content-action-button--get-started {
-  background: var(--button-background-color-dark-light);
+  background: var(--button-background-color-light);
   border-radius: 6px;
-  border: 1px solid var(--color-muted-brown);
+  border: 1px solid var(--button-border-color-dark);
   box-shadow: inset 0 -4px 0 var(--button-box-shadow-color);
   color: var(--text-color);
   font-family: var(--font-family-code);
@@ -1277,7 +1282,7 @@
 
 /* Footer section start */
 .footer-landing {
-  background: var(--footer-background);
+  background: var(--footer-background-color);
   border-radius: 30px;
   margin: 0 20px 20px 20px;
   position: relative;
@@ -1321,7 +1326,7 @@
 .footer__wrapper-inner-menu > ul > li > .footer__wrapper-inner-menu-separator {
   font-weight: 600;
   font-size: var(--font-size-h7);
-  line-height: var(--line-height-h8);
+  line-height: var(--line-height-h7-xs);
   display: block;
   color: var(--text-color-accent);
   opacity: 0.9;
@@ -1334,7 +1339,7 @@
 }
 
 .footer__wrapper-inner-menu > ul > li > ul > li a {
-  font-weight: 500;
+  font-weight: 600;
   font-size: initial;
   /* TODO: replace with var */
   line-height: calc(28 / 16);
@@ -1353,7 +1358,7 @@
 }
 
 .footer__wrapper-inner-social-logo {
-  max-width: 286px;
+  max-width: 270px;
 }
 
 .footer__wrapper-inner-social-logo svg {
@@ -1370,7 +1375,7 @@
   color: var(--text-color);
   font-size: var(--font-size-h7);
   font-weight: 600;
-  line-height: var(--line-height-h8);
+  line-height: var(--line-height-h7-xs);
   opacity: 0.9;
   padding-bottom: 15px;
 }
@@ -1390,7 +1395,7 @@
   color: var(--text-color);
   font-family: var(--font-family-code);
   font-size: initial;
-  font-weight: 400;
+  font-weight: 500;
   /* TODO: change it to var */
   line-height: calc(21 / 16);
   padding: 10px 36px 10px 14px;
@@ -1400,7 +1405,7 @@
   color: var(--text-color);
   font-family: inherit;
   font-size: initial;
-  font-weight: 400;
+  font-weight: 500;
   line-height: var(--line-height-22);
 }
 
@@ -1408,7 +1413,7 @@
   color: var(--text-color);
   font-family: inherit;
   font-size: initial;
-  font-weight: 400;
+  font-weight: 500;
   line-height: var(--line-height-22);
 }
 
@@ -1439,24 +1444,24 @@
 .footer__wrapper-inner-social-subscribe-btn {
   background: var(--button-background-color-dark);
   border-radius: 4.3px;
-  border: 0.752783px solid var(--color-muted-brown);
+  border: 0.752783px solid var(--button-border-color-dark);
   box-shadow: inset 0px -3.28005px 0px var(--button-border-color);
   color: var(--background-color);
   font-family: var(--font-family-code);
   font-feature-settings: 'salt' on;
   font-size: var(--font-size-h8);
-  font-weight: 500;
-  line-height: var(--line-height-25);
-  padding: 9px 17px;
+  font-weight: 600;
+  line-height: var(--line-height-33);
+  padding: 8px 17px;
   position: absolute;
   right: 0;
   top: 0;
 }
 
 .footer__wrapper-inner-social-subscribe-btn:hover {
-  background: var(--button-background-color-accent);
-  border: 0.752783px solid var(--button-border-accent-color);
-  box-shadow: inset 0 -4px 0 var(--button-border-accent-color);
+  background: var(--button-background-color-light);
+  border: 0.752783px solid var(--button-border-color);
+  box-shadow: inset 0 -4px 0 var(--button-border-color);
   color: var(--text-color);
   cursor: pointer;
   transition: 0.3s ease-in-out;
@@ -1488,8 +1493,9 @@
 .footer__wrapper-bottom-text {
   color: var(--button-background-color-dark);
   font-size: initial;
-  font-weight: 500;
-  line-height: var(--line-height-h7-xs);
+  font-weight: 600;
+  /* TODO: convert to var */
+  line-height: calc(24 / 16);
   opacity: 0.9;
 }
 
