--- a/public/css/landing/style.css
+++ b/public/css/landing/style.css
@@ -150,7 +150,7 @@
   flex-wrap: wrap;
   gap: 24px;
   justify-content: center;
-  margin-bottom: 69px;
+  margin-bottom: 42px;
   margin-top: 48px;
 }
 
@@ -263,13 +263,13 @@
   display: flex;
   flex-direction: column;
   margin: auto;
-  max-width: min(1200px, 90%);
+  max-width: var(--layout-content-width);
   padding: 48px 117px;
   width: 100%;
 }
 
 .hero__companies__text {
-  color: var(--text-color-accent);
+  color: var(--text-color);
   font-size: var(--font-size-h5);
   font-weight: 600;
   line-height: var(--line-height-h5);
@@ -280,22 +280,38 @@
   align-items: center;
   display: flex;
   justify-content: space-between;
-  padding-top: 51px;
+  padding-top: 20px;
 }
 
 .features__community-stats {
   align-items: center;
   display: flex;
-  justify-content: space-evenly;
-  margin-bottom: 110px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 64px;
-  max-width: min(1200px, 90%);
+  flex-direction: column;
+  gap: 40px;
+  /* justify-content: space-evenly;
+  margin-bottom: 110px; */
+  /* margin-left: auto;
+  margin-right: auto; */
+  /* margin-top: 64px; */
+  max-width: var(--layout-content-width);
   width: 100%;
   border: 5px solid var(--border-color);
   border-radius: 20px;
   padding: 40px 0;
+}
+
+.features__community-stats__text {
+  color: var(--text-color);
+  font-size: var(--font-size-h5);
+  font-weight: 600;
+  line-height: var(--line-height-h5);
+}
+
+.features__community-stats-container {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  max-width: 1000px;
 }
 
 .features__community-stats-wrapper {
@@ -303,18 +319,18 @@
 }
 
 .features__community-stats-wrapper__heading {
-  color: var(--subtitle-text-color);
-  font-size: 36px;
+  color: var(--feature-title-text-color);
+  font-size: var(--font-size-h4);
   font-weight: 700;
-  line-height: 42px;
+  line-height: var(--line-height-h4);
   text-align: center;
 }
 
 .features__community-stats-wrapper__sub-heading {
-  color: var(--subtitle-text-color);
-  font-size: 18px;
+  color: var(--feature-title-text-color);
+  font-size: var(--font-size-h7);
   font-weight: 600;
-  line-height: 24px;
+  line-height: var(--line-height-h7-xs);
   text-align: center;
 }
 /* Hero Section end */
@@ -324,8 +340,8 @@
   margin-bottom: 120px;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 80px;
-  max-width: min(1200px, 90%);
+  margin-top: 65px;
+  max-width: var(--layout-content-width);
   width: 100%;
   position: relative;
 }
@@ -335,7 +351,7 @@
   font-size: var(--font-size-h2);
   font-weight: 700;
   line-height: var(--line-height-h2);
-  padding-bottom: 120px;
+  padding-bottom: 72px;
   text-align: center;
 }
 
@@ -364,28 +380,23 @@
   display: flex;
   flex-direction: column;
   flex: 1 1 0%;
-  gap: 27px;
+  gap: 24px;
 }
 
 .features__content-wrapper-heading {
   color: var(--text-color);
   font-family: var(--font-family-code);
   font-size: var(--font-size-h4);
-  font-weight: 600;
+  font-weight: 700;
   line-height: var(--line-height-h4);
   padding: 10px 0;
 }
 
 .features__content-wrapper-heading::before {
-  content: '<';
+  content: '>';
   color: var(--text-color-accent);
   font-family: var(--font-family-code);
-}
-
-.features__content-wrapper-heading::after {
-  content: '/>';
-  color: var(--text-color-accent);
-  font-family: var(--font-family-code);
+  padding-right: 22px;
 }
 
 .features__content-wrapper-description {
@@ -395,7 +406,7 @@
 }
 
 .features__content-wrapper-description-title {
-  color: var(--subtitle-text-color);
+  color: var(--feature-title-text-color);
   font-size: var(--font-size-h6);
   font-weight: 500;
   line-height: var(--line-height-h6);
@@ -404,6 +415,7 @@
 .features__content-wrapper-description-list {
   color: var(--text-color);
   display: flex;
+  font-weight: 600;
   flex-direction: column;
   font-size: var(--font-size-h7);
   line-height: var(--line-height-h7-s);
@@ -438,7 +450,7 @@
   position: absolute;
   height: 100%;
   overflow: hidden;
-  top: 206px;
+  top: 150px;
   left: 0;
   right: 0;
 }
@@ -455,7 +467,7 @@
 .capabilities {
   margin-left: auto;
   margin-right: auto;
-  max-width: min(1200px, 90%);
+  max-width: var(--layout-content-width);
   width: 100%;
   margin-bottom: 200px;
   position: relative;
@@ -752,11 +764,11 @@
 }
 /* Nightwatch Performance section end */
 
-/* Nightwatch Comparison section etart */
+/* Nightwatch Comparison section start */
 .comparison {
   margin-left: auto;
   margin-right: auto;
-  max-width: min(1200px, 90%);
+  max-width: var(--layout-content-width);
   width: 100%;
   margin-bottom: 160px;
 }
@@ -887,7 +899,7 @@
 .testimonial {
   margin-left: auto;
   margin-right: auto;
-  max-width: min(1200px, 90%);
+  max-width: var(--layout-content-width);
   width: 100%;
   margin-bottom: 120px;
   position: relative;
@@ -993,7 +1005,7 @@
   margin-bottom: 120px;
   margin-left: auto;
   margin-right: auto;
-  max-width: min(1200px, 90%);
+  max-width: var(--layout-content-width);
   width: 100%;
   position: relative;
 }
@@ -1078,7 +1090,7 @@
   margin-bottom: 120px;
   margin-left: auto;
   margin-right: auto;
-  max-width: min(1200px, 90%);
+  max-width: var(--layout-content-width);
   width: 100%;
   z-index: 1;
   position: relative;
@@ -1154,7 +1166,7 @@
   margin-bottom: 120px;
   margin-left: auto;
   margin-right: auto;
-  max-width: min(1200px, 90%);
+  max-width: var(--layout-content-width);
   width: 100%;
   display: flex;
   gap: 94px;
@@ -1293,7 +1305,7 @@
   flex-direction: column;
   margin-left: auto;
   margin-right: auto;
-  max-width: min(1200px, 90%);
+  max-width: var(--layout-content-width);
   padding-bottom: 50px;
   padding-top: 84px;
   width: 100%;
