change header and footer in doc section

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -35,7 +35,7 @@
   --color-vibrant-orange: hsla(27.16, 95%, 60.78%, 1);
   --color-pure-yellow: hsla(35.56, 100%, 68.24%, 1);
   --color-yellow: hsla(35, 85%, 46%, 1);
-  --color-brown: hsla(23, 72%, 33%, 1);
+  --text-color-accent: hsla(23, 72%, 33%, 1);
   --color-grey: hsla(0, 0%, 94%, 1);
   --color-light-yellow: hsla(49, 65%, 97%, 1);
   --color-light-brown: hsla(23, 9%, 36%, 1);
